--- a/renovate.json
+++ b/renovate.json
@@ -7,9 +7,9 @@
       "customType": "regex",
       "managerFilePatterns": ["/(^|/)pom\\.xml$/"],
       "matchStrings": [
-        "<id>customer-generate-sources</id>.*?<sourceDirectory>\\$\\{project\\.basedir\\}/schemas/customer/v(?<currentValue>\\d+)</sourceDirectory>",
-        "<id>payment-generate-sources</id>.*?<sourceDirectory>\\$\\{project\\.basedir\\}/schemas/payment/v(?<currentValue>\\d+)</sourceDirectory>",
-        "<id>card-generate-sources</id>.*?<sourceDirectory>\\$\\{project\\.basedir\\}/schemas/card/v(?<currentValue>\\d+)</sourceDirectory>"
+        "<id>customer-generate-sources</id>([\\s\\S]*?)<sourceDirectory>\\$\\{project\\.basedir\\}/schemas/customer/v(?<currentValue>\\d+)</sourceDirectory>",
+        "<id>payment-generate-sources</id>([\\s\\S]*?)<sourceDirectory>\\$\\{project\\.basedir\\}/schemas/payment/v(?<currentValue>\\d+)</sourceDirectory>",
+        "<id>card-generate-sources</id>([\\s\\S]*?)<sourceDirectory>\\$\\{project\\.basedir\\}/schemas/card/v(?<currentValue>\\d+)</sourceDirectory>"
       ],
       "datasourceTemplate": "custom.kafka-apis",
       "depNameTemplate": "{{{replace '/' '-' depName}}}",
