--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "customManagers": [
+  "regexManagers": [
     {
-      "customType": "regex",
-      "managerFilePatterns": [
+      "fileMatch": [
         "^pom\\.xml$"
       ],
       "matchStrings": [
@@ -13,17 +12,9 @@
       "versioningTemplate": "regex:^v(?<major>\\d+)(?<minor>\\.\\d+)?(?<patch>\\.\\d+)?$"
     }
   ],
-  "customDatasources": [
-    {
-      "name": "kafka-schema-versions",
-      "defaultUrl": "https://raw.githubusercontent.com/rytbank/schemas/main/kafka-apis-manifest.yaml",
-      "extractVersion": "const yaml = require('js-yaml');const doc = yaml.load(content);const dep = doc['kafka-apis'].find(item => item.name === depName);if (!dep) { return null; }const versions = dep.versions.map(v => parseInt(v.slice(1)));const latestVersion = Math.max(...versions);return `v${latestVersion}`;",
-      "supports  `extends`": true,
-      "supports `pin`": true,
-      "supports `extractVersion`": false,
-      "supports `automerge`": true,
-      "supports `rangeStrategy`": true,
-      "supports `ignore`": true
-    }
-  ]
+  "customDatasources": {
+    "name": "kafka-schema-versions",
+    "defaultUrl": "https://raw.githubusercontent.com/rytbank/schemas/main/kafka-apis-manifest.yaml",
+    "extractVersion": "const yaml = require('js-yaml');const doc = yaml.load(content);const dep = doc['kafka-apis'].find(item => item.name === depName);if (!dep) { return null; }const versions = dep.versions.map(v => parseInt(v.slice(1)));const latestVersion = Math.max(...versions);return `v${latestVersion}`;"
+  }
 }
